[gd_scene load_steps=4 format=3 uid="uid://cft3d6nbppw55"]

[ext_resource type="Script" path="res://ui.gd" id="1_dasgm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3ki5"]
bg_color = Color(1, 0.34902, 0.478431, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="LabelSettings" id="LabelSettings_s7h8d"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dasgm")
metadata/_edit_vertical_guides_ = [20.0]

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 574.0
offset_bottom = 37.0
theme_override_styles/fill = SubResource("StyleBoxFlat_i3ki5")
rounded = true
show_percentage = false

[node name="ScrapBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 46.0
offset_right = 574.0
offset_bottom = 66.0
theme_override_styles/fill = SubResource("StyleBoxFlat_i3ki5")
rounded = true
show_percentage = false

[node name="PowerupAlert" type="Label" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 229.0
offset_right = 491.0
offset_bottom = 252.0
scale = Vector2(4.88, 3.16)
label_settings = SubResource("LabelSettings_s7h8d")

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timer_timeout"]
